--- a/templates/admin_base.html
+++ b/templates/admin_base.html
@@ -10,6 +10,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <link href="/static/css/admin.css" rel="stylesheet">
     <link href="{{ url_for('static', filename='css/responsive.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/universal-responsive.css') }}" rel="stylesheet">
     <style>
         :root {
             --primary: #0077B6;
