--- a/templates/industry_base.html
+++ b/templates/industry_base.html
@@ -6,6 +6,7 @@
     <title>{{ title or 'Industry Dashboard - BlueCarbon' }}</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link href="{{ url_for('static', filename='css/responsive.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/universal-responsive.css') }}" rel="stylesheet">
     <style>
         :root {
             --primary: #0ea5e9;
