--- a/templates/admin_base.html
+++ b/templates/admin_base.html
@@ -11,6 +11,7 @@
     <link href="/static/css/admin.css" rel="stylesheet">
     <link href="{{ url_for('static', filename='css/responsive.css') }}" rel="stylesheet">
     <link href="{{ url_for('static', filename='css/universal-responsive.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/auto-responsive.css') }}" rel="stylesheet">
     <style>
         :root {
             --primary: #0077B6;
@@ -606,5 +607,8 @@
             }, 30000);
         });
     </script>
+    
+    <!-- Auto-Responsive Navigation Script -->
+    <script src="{{ url_for('static', filename='js/auto-responsive.js') }}"></script>
 </body>
 </html>
