--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <link href="{{ url_for('static', filename='css/responsive.css') }}" rel="stylesheet">
     <link href="{{ url_for('static', filename='css/universal-responsive.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/auto-responsive.css') }}" rel="stylesheet">
     <style>
         :root {
             --primary: #0077B6;
@@ -563,6 +564,9 @@
             }
         }
     </script>
+    
+    <!-- Auto-Responsive Navigation Script -->
+    <script src="{{ url_for('static', filename='js/auto-responsive.js') }}"></script>
     
     <!-- Responsive Tables Script -->
     <script src="{{ url_for('static', filename='js/responsive-tables.js') }}"></script>
