--- a/templates/ngo/ngo_base.html
+++ b/templates/ngo/ngo_base.html
@@ -18,6 +18,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <link href="{{ url_for('static', filename='css/responsive.css') }}" rel="stylesheet">
     <link href="{{ url_for('static', filename='css/universal-responsive.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/auto-responsive.css') }}" rel="stylesheet">
     
     <!-- Allow child templates to add custom head content -->
     {% block head %}{% endblock %}
@@ -331,5 +332,8 @@
             }
         });
     </script>
+    
+    <!-- Auto-Responsive Navigation Script -->
+    <script src="{{ url_for('static', filename='js/auto-responsive.js') }}"></script>
 </body>
 </html>
